--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="176dp"
-    android:background="@color/white"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#4f4d47"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="15dp">
@@ -11,17 +12,24 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal">
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/icon"/>
+        <androidx.cardview.widget.CardView
+            android:paddingTop="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="20dp">
+
+            <ImageView
+                android:layout_width="1024px"
+                android:layout_height="711px"
+                android:src="@drawable/ch4" />
+        </androidx.cardview.widget.CardView>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
-        android:text="Login to actvity"
-        android:textSize="10dp" />
+        android:text="Chlorophyll App"
+        android:textSize="14dp" />
     </LinearLayout>
 
 </LinearLayout>
