--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,19 +7,19 @@
         <item
             android:id="@+id/nav_khome"
 
-            android:title="Home_page" />
+            android:title="Pots" />
         <item
             android:id="@+id/nav_profile"
 
-            android:title="Oders placed" />
+            android:title="Plants" />
         <item
             android:id="@+id/nav_farmers_registration"
 
-            android:title="FARMERS" />
+            android:title="Fertilizers" />
 
         <item
             android:id="@+id/nav_product_to_sell"
-            android:title="Product Available" />
+            android:title="Seeds" />
 
     </group>
     <item android:title="Contact Us">
