--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -9,31 +9,30 @@
 
 
 
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        app:cardCornerRadius="80dp"
-        android:layout_gravity="center"
-        android:layout_margin="44dp">
+        app:cardCornerRadius="20dp"
+        android:layout_margin="14dp">
 
         <ImageView
-            android:id="@+id/shareDetailsImage"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:id="@+id/productImage"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/ch5" />
 
     </androidx.cardview.widget.CardView>
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+
 
 
         <TextView
@@ -45,7 +44,7 @@
             android:textColor="@color/black"
             android:fontFamily="monospace"
             android:layout_gravity="center"
-            android:textSize="16dp" />
+            android:textSize="22dp" />
 
     </LinearLayout>
 
