--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -27,7 +27,7 @@
             <item
                 android:id="@+id/nav_mail"
 
-                android:title="Mail" />
+                android:title="Cart" />
 
         </menu>
     </item>
