--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:weightSum="11"
     tools:context=".Cart">
 
 
@@ -12,6 +13,7 @@
         android:layout_height="match_parent"
         android:id="@+id/scroll_view"
         android:layout_weight="8"
+        android:layout_above="@+id/buyLinear"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,5 +33,47 @@
         </LinearLayout>
     </ScrollView>
 
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/bottom_navigation_cart"-->
+<!--        android:layout_weight="2"-->
+<!--        app:itemBackground="@color/white"-->
+<!--        app:itemTextColor="@drawable/selector_cart"-->
+<!--        app:itemIconTint="@drawable/selector_cart"-->
+<!--        app:menu="@menu/menu_navigation_cart"-->
+<!-- -->
+<!--        android:layout_alignParentBottom="true"/>-->
+
+    <LinearLayout
+        android:id="@+id/buyLinear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        android:layout_alignParentBottom="true">
+
+        <TextView
+            android:id="@+id/totalAmountTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="sans-serif-black"
+            android:text="AMOUNT"
+            android:textColor="#040303"
+            android:textSize="24sp">
+
+        </TextView>
+        <Button
+            android:id="@+id/buyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="BUY NOW">
+
+        </Button>
+
+    </LinearLayout>
 
 </RelativeLayout>
