--- a/app/src/main/res/layout/item_design_cart.xml
+++ b/app/src/main/res/layout/item_design_cart.xml
@@ -11,31 +11,32 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
     >
 
 
-
     <TextView
+        android:id="@+id/nameTextView"
         android:layout_width="120dp"
         android:layout_height="30dp"
-        android:id="@+id/nameTextView"
-        android:text="Name"
-        android:fontFamily="sans-serif-black"
-        android:textColor="@color/black"
-        android:textSize="12sp"
-
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp">
+        android:fontFamily="serif-monospace"
+        android:includeFontPadding="false"
+
+        android:text="Name"
+        android:textColor="@color/black"
+        android:textSize="20sp">
 
     </TextView>
 
     <TextView
+        android:id="@+id/amountTextView"
         android:layout_width="100dp"
         android:layout_height="25dp"
-        android:id="@+id/amountTextView"
+        android:layout_below="@id/nameTextView"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/amaranth"
         android:text="Price"
         android:textColor="@color/black"
-        android:textSize="18sp"
-        android:layout_below="@id/nameTextView"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp">
+        android:textSize="18sp">
 
     </TextView>
 
@@ -58,17 +59,19 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         </ImageView>
 
     </androidx.cardview.widget.CardView>
+
     <TextView
+        android:id="@+id/dateTextView"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
-        android:id="@+id/dateTextView"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/imageView"
+        android:fontFamily="@font/amaranth"
         android:text="Qty"
         android:textColor="@color/black"
-        android:textSize="15sp"
-        android:layout_toRightOf="@+id/imageView"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_alignParentRight="true">
+        android:textSize="15sp">
 
     </TextView>
     <TextView
@@ -85,27 +88,30 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         android:visibility="invisible">
 
     </TextView>
-    <TextView
-        android:layout_width="150dp"
-        android:layout_height="25dp"
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/shareIdTextView"
         android:text="Remove"
-        android:textColor="#ab0f2c"
+        android:textSize="10dp"
+        android:textColor="#d4babf"
         android:layout_marginLeft="20dp"
         android:layout_below="@+id/dateTextView"
         android:layout_toRightOf="@+id/imageView">
 
-    </TextView>
+    </Button>
+
     <Button
         android:id="@+id/removeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/dateTextView"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@+id/imageView"
+        android:fontFamily="@font/amethysta"
         android:text="Remove"
         android:textSize="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_below="@+id/dateTextView"
-        android:visibility="invisible"
-        android:layout_toRightOf="@+id/imageView">
+        android:visibility="invisible">
 
     </Button>
 
