--- a/app/src/main/res/drawable/selector_cart.xml
+++ b/app/src/main/res/drawable/selector_cart.xml
@@ -2,11 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_selected="true"
-        android:color="@android:color/background_dark"/>
+        android:color="@android:color/darker_gray"/>
 
     <item
         android:state_selected="false"
-        android:color="@android:color/background_dark"/>
-
+        android:color="@android:color/background_light"/>
 
 </selector>
