--- a/app/src/main/res/layout/item_design_homepage.xml
+++ b/app/src/main/res/layout/item_design_homepage.xml
@@ -31,29 +31,30 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
+                android:id="@+id/nameTextView"
                 android:layout_width="120dp"
                 android:layout_height="30dp"
-                android:id="@+id/nameTextView"
-                android:text="Name"
-                android:fontFamily="sans-serif-black"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:layout_toRightOf="@id/imageView"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginLeft="10dp">
+                android:layout_toRightOf="@id/imageView"
+                android:fontFamily="cursive"
+                android:text="Name"
+                android:textColor="@color/black"
+                android:textSize="22sp">
 
             </TextView>
 
             <TextView
+                android:id="@+id/amountTextView"
                 android:layout_width="100dp"
                 android:layout_height="25dp"
-                android:id="@+id/amountTextView"
+                android:layout_marginLeft="70dp"
+                android:layout_marginTop="30dp"
+                android:layout_toRightOf="@id/nameTextView"
+                android:fontFamily="cursive"
                 android:text="Amount"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                android:layout_toRightOf="@id/nameTextView"
-                android:layout_marginTop="30dp"
-                android:layout_marginLeft="70dp">
+                android:textSize="18sp">
 
             </TextView>
             <TextView
