--- a/app/src/main/res/menu/menu_navigation_cart.xml
+++ b/app/src/main/res/menu/menu_navigation_cart.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/amount"
-        android:title="@string/main_navi_item_amount"
-       />
-    <item
-        android:id="@+id/buy"
-        android:title="@string/main_navi_item_home" />
 
+    <item
+        android:id="@+id/home"
+        android:title="Home"
+        android:icon="@drawable/ic_home"/>
+    <item
+        android:id="@+id/cart"
+        android:title="Cart"
+        android:icon="@drawable/ic_cart"/>
 
 
 </menu>
