--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/aclonica</item>
         <item>@font/adamina</item>
+        <item>@font/aldrich</item>
         <item>@font/alfa_slab_one</item>
         <item>@font/alice</item>
+        <item>@font/allan</item>
         <item>@font/allerta</item>
+        <item>@font/amarante</item>
         <item>@font/amaranth</item>
+        <item>@font/amaranth_italic</item>
         <item>@font/amethysta</item>
+        <item>@font/amita_bold</item>
+        <item>@font/anonymous_pro_bold_italic</item>
+        <item>@font/architects_daughter</item>
+        <item>@font/atma</item>
+        <item>@font/carter_one</item>
+        <item>@font/irish_grover</item>
     </array>
 </resources>
