--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -28,6 +28,10 @@
                 android:id="@+id/nav_mail"
 
                 android:title="Settings" />
+            <item
+                android:id="@+id/my_orders"
+
+                android:title="My Orders" />
 
         </menu>
     </item>
