--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,9 @@
         <item>@font/aclonica</item>
         <item>@font/adamina</item>
         <item>@font/aldrich</item>
+        <item>@font/alegreya_bold</item>
+        <item>@font/alegreya_sans_medium</item>
+        <item>@font/alegreya_sc_bold</item>
         <item>@font/alfa_slab_one</item>
         <item>@font/alice</item>
         <item>@font/allan</item>
