--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,9 +1,314 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".EditProfile">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.cardview.widget.CardView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/imageView"
+            android:layout_margin="1dp">
+
+            <ImageView
+                android:id="@+id/shareDetailsImage"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/edit" />
+
+        </androidx.cardview.widget.CardView>
+
+
+        <TextView
+            android:id="@+id/shopNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text=" EDIT PROFILE"
+            android:textColor="@color/black"
+            android:fontFamily="monospace"
+            android:layout_gravity="center"
+            android:paddingTop="10dp"
+            android:textSize="16dp" />
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="0dp"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:weightSum="10">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/availableTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:text="NAME"
+                android:textSize="17dp"
+                android:padding="10dp"
+                android:gravity="left" />
+            <EditText
+                android:id="@+id/nameEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2.0"
+                android:text="000"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:gravity="right" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/totalTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:text="E Mail"
+                android:textSize="17dp"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:padding="10dp"
+                android:gravity="left" />
+            <EditText
+                android:id="@+id/emailEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2.0"
+                android:text="000"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:gravity="right" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/phoneTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:text="PHONE"
+                android:textSize="17dp"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:padding="10dp"
+                android:gravity="left" />
+            <EditText
+                android:id="@+id/phoneEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2.0"
+                android:text="000"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:gravity="right" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/percentageTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:text="PASSWORD"
+                android:textSize="17dp"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:gravity="left" />
+            <EditText
+                android:id="@+id/passwordEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2.0"
+                android:text="********"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:padding="10dp"
+                android:gravity="right" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/addressHouseNameTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:text="House No"
+                android:textSize="17dp"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:gravity="left" />
+            <EditText
+                android:id="@+id/addressHouseNameEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2.0"
+                android:text="********"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:padding="10dp"
+                android:gravity="right" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/addressAreaTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:text="Area/Street"
+                android:textSize="17dp"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:gravity="left" />
+            <EditText
+                android:id="@+id/addressAreaEditTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2.0"
+                android:text="********"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:padding="10dp"
+                android:gravity="right" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/addressCityTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:text="City"
+                android:textSize="17dp"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:gravity="left" />
+            <EditText
+                android:id="@+id/addressCityEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2.0"
+                android:text="********"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:padding="10dp"
+                android:gravity="right" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/addressPinTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:text="Pin:"
+                android:textSize="17dp"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:gravity="left" />
+            <EditText
+                android:id="@+id/addressPinEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="2.0"
+                android:text="Pin"
+                android:textColor="@color/black"
+                android:fontFamily="monospace"
+                android:padding="10dp"
+                android:gravity="right" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="20dp">
+
+            <EditText
+                android:id="@+id/confirmEditText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_weight="8.0"
+                android:gravity="center_horizontal"
+                android:fontFamily="monospace"
+                android:hint="Enter Old Password"
+                android:padding="20dp"
+                android:textAlignment="center" />
+
+            <Button
+                android:id="@+id/saveButton"
+                android:layout_width="0dp"
+                android:layout_height="36dp"
+                android:layout_weight="3.0"
+                android:background="@drawable/blackbutton"
+                android:text="Save" />
+        </LinearLayout>
+
+
+
+
+
+
+    </LinearLayout>
+
+
+
+</LinearLayout>
