--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -87,14 +87,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:paddingTop="10dp"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/totalTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="8.0"
-                android:text="Available Quantity"
+                android:text=" Description"
                 android:textSize="17dp"
                 android:textColor="@color/black"
                 android:fontFamily="monospace"
@@ -102,10 +102,9 @@
                 android:gravity="left" />
             <TextView
                 android:id="@+id/availableAmountTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2.0"
-                android:text="000"
                 android:padding="10dp"
                 android:textColor="@color/black"
                 android:fontFamily="monospace"
@@ -116,14 +115,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="0dp"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/percentageTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="1dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="8.0"
-                android:text="Description"
                 android:textSize="17dp"
                 android:padding="10dp"
                 android:textColor="@color/black"
@@ -133,12 +130,11 @@
                 android:id="@+id/descriptionTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="2.0"
                 android:text="000"
                 android:textColor="@color/black"
                 android:fontFamily="monospace"
-                android:padding="10dp"
-                android:gravity="right" />
+                android:padding="12dp"
+                android:gravity="left" />
         </LinearLayout>
 
 
